force-app/main/default/objects/Country_ChatApp__mdt/Country_ChatApp__mdt.object-meta.xml
<CustomObject>
    <label>Country ChatApp</label>
    <pluralLabel>Country ChatApps</pluralLabel>
</CustomObject>