force-app/main/default/objects/Country_ChatApp__mdt/fields/Kakao__c.field-meta.xml
<CustomField>
    <fullName>Kakao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kakao</label>
    <type>Checkbox</type>
</CustomField>