force-app/main/default/objects/Country_ChatApp__mdt/fields/WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whats App</label>
    <type>Checkbox</type>
</CustomField>