force-app/main/default/objects/Country_ChatApp__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Kakao__c</columns>
    <columns>Line__c</columns>
    <columns>Wechat__c</columns>
    <columns>WhatsApp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>